remove redundant dependency H2