@@ -20,6 +20,7 @@
 		<lombok.version>1.18.34</lombok.version>
 		<datafaker.version>2.3.1</datafaker.version>
 		<mcp.version>3.13.0</mcp.version>
+		<argLine>-XX:+EnableDynamicAgentLoading</argLine>
 	</properties>
 
 	<dependencies>
@@ -77,11 +78,6 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>net.datafaker</groupId>
 			<artifactId>datafaker</artifactId>
 			<version>${datafaker.version}</version>
@@ -108,6 +104,12 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok-mapstruct-binding</artifactId>
 			<version>0.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+			<artifactId>annotations</artifactId>
+			<version>24.1.0</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
@@ -149,6 +151,10 @@
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
